# ProjetoFinalAED2

./: .gitignore  CMakeLists.txt  README.md  main.c
headers/: Arvores.h  Busca.h  DinamycArray.h  DynamicArray.h  Entrada.h  Leitura.h  Menu.h
libs/: Arvores.c  Busca.c  DinamycArray.c  DynamicArray.c  Entrada.c  Leitura.c  Menu.c
